--- a/Room_App/app/build.gradle
+++ b/Room_App/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.androidexample00"
+        applicationId 'com.example.room_app'
         minSdk 23
         targetSdk 31
         versionCode 1
